# xmod

./: .gitattributes  .gitignore  BACKLOG.md  Cargo.toml  README.md  REVIEW.md
.cargo/: config.toml
libs/xflux/: Cargo.toml  README.md  TODO.md
libs/xflux/src/: action.rs  context.rs  error.rs  event.rs  invoke.rs  lib.rs  trigger.rs
libs/xflux/src/spec/: mod.rs
libs/xflux/src/spec/action/: custom.rs  mod.rs
libs/xflux/src/spec/action/system/: mod.rs
libs/xflux/src/spec/action/system/http/: method.rs  mod.rs
libs/xmod/: Cargo.toml
libs/xok/: Cargo.toml  README.md
libs/xok/src/: code.rs  lib.rs  severity.rs
libs/xpath/: Cargo.toml  README.md
libs/xpath/src/: error.rs  ident.rs  lib.rs  path.rs  segment.rs
libs/xpipe/: Cargo.toml  README.md
libs/xpipe/src/: async_task.rs  error.rs  lib.rs  routine.rs  task.rs
libs/xpipe/src/op/: filter.rs  flat_map.rs  fork.rs  logical.rs  map.rs  mod.rs  result.rs  run.rs  time.rs  try_map.rs  zip.rs
libs/xsch/: Cargo.toml  README.md  TODO.md
libs/xsch-derive/: Cargo.toml
libs/xsch-derive/src/: lib.rs  rules.rs  schema_type.rs  structs.rs
libs/xsch-derive/tests/: mod.rs
libs/xsch/src/: any.rs  array.rs  bool.rs  context.rs  equals.rs  error.rs  float.rs  int.rs  lib.rs  number.rs  object.rs  options.rs  phase.rs  required.rs  rule.rs  string.rs
libs/xsch/src/rule/: equals.rs  fields.rs  items.rs  max.rs  min.rs  mod.rs  options.rs  pattern.rs  required.rs
libs/xsch/src/rules/: enumerate.rs  mod.rs  one_of.rs  required.rs
libs/xtera/: Cargo.toml  README.md
libs/xtera-derive/: Cargo.toml
libs/xtera-derive/src/: lib.rs  parse.rs
libs/xtera-derive/src/parse/: expr.rs  for_node.rs  if_node.rs  include_node.rs  match_node.rs  mod.rs  node.rs
libs/xtera-derive/tests/: control_tests.rs  expr_tests.rs  include_tests.rs  interp_tests.rs  loop_tests.rs  match_tests.rs  mod.rs  precedence_tests.rs  render_tests.rs
libs/xtera/src/: lib.rs  scope.rs  template.rs
libs/xtera/src/ast/: eval.rs  expr.rs  mod.rs  node.rs  op.rs  span.rs
libs/xtera/src/ast/error/: division_by_zero.rs  include_depth.rs  index_out_of_bounds.rs  invalid_index.rs  mod.rs  not_callable.rs  not_iterable.rs  type_error.rs  undefined_field.rs  undefined_pipe.rs  undefined_template.rs  undefined_variable.rs
libs/xtera/src/ast/expr/: array.rs  binary.rs  call.rs  ident.rs  index.rs  match_expr.rs  member.rs  mod.rs  object.rs  pipe.rs  unary.rs  value.rs
libs/xtera/src/ast/node/: block.rs  for_node.rs  if_node.rs  include.rs  interp.rs  match_node.rs  mod.rs  switch.rs  text.rs
libs/xtera/src/eval/: binary.rs  call.rs  context.rs  error.rs  expr.rs  index.rs  literal.rs  member.rs  mod.rs  pipe.rs  render.rs  unary.rs
libs/xtera/src/parse/: error.rs  expr.rs  lexer.rs  mod.rs  node.rs  parser.rs  span.rs  token.rs
libs/xtera/src/render/: for_block.rs  if_block.rs  interp.rs  mod.rs  switch_block.rs
libs/xval/: Cargo.toml  README.md
libs/xval-derive/: Cargo.toml
libs/xval-derive/src/: enums.rs  lib.rs  structs.rs  tuples.rs
libs/xval-derive/tests/: enum_tests.rs  generic_tests.rs  mod.rs  struct_tests.rs  tuple_tests.rs
libs/xval/src/: bool.rs  ext.rs  ident.rs  lib.rs  macros.rs  object.rs  string.rs
libs/xval/src/num/: float.rs  int.rs  mod.rs  uint.rs
libs/xval/src/object/: array.rs  arrays.rs  iter.rs  mod.rs  serial.rs  struct.rs  structs.rs  tuples.rs
libs/xwire/: Cargo.toml  DESIGN.md
libs/xwire-derive/: Cargo.toml
libs/xwire/src/: lib.rs
