[package]
name = "xflux"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
serde = ["dep:serde", "xval/serde", "xsch/serde", "xtera/serde", "semver/serde"]

[dependencies]
async-trait = "0.1"
semver = "1"
serde = { workspace = true, optional = true }

xok = { workspace = true }
xtera = { workspace = true }
xval = { workspace = true }
xsch = { workspace = true }