[package]
name = "xpipe"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
xok = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
