[package]
name = "xsch"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
xok = { workspace = true }
xval = { workspace = true }
xpath = { workspace = true }
serde = { workspace = true, optional = true }
