[package]
name = "xsch"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
serde = ["dep:serde", "xpath/serde", "xval/serde"]
regex = ["dep:regex"]

[dependencies]
regex = { version = "1", optional = true }

xok = { workspace = true }
xval = { workspace = true }
xpath = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"
