[package]
name = "xsch"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
derive = ["xsch-derive"]
serde = ["dep:serde", "xpath/serde", "xval/serde"]
regex = ["dep:regex"]

[dependencies]
regex = { version = "1", optional = true }
serde = { workspace = true, optional = true }

xok = { workspace = true }
xval = { workspace = true }
xpath = { workspace = true }
xsch-derive = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"
