[package]
name = "xtera-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits"] }

[dev-dependencies]
xtera = { workspace = true }
xval = { workspace = true }
