[package]
name = "xtera"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
logos = { version = "0.16" }
uuid = { version = "1.21", features = ["v4"] }

xval = { workspace = true }