[package]
name = "xtera"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
derive = ["xtera-derive"]

[dependencies]
logos = { version = "0.16" }
xtera-derive = { workspace = true, optional = true }

xval = { workspace = true }