[package]
name = "xtera"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
derive = ["xtera-derive"]
serde = ["dep:serde", "xval/serde"]

[dependencies]
logos = { version = "0.16" }
serde = { workspace = true, optional = true }

xtera-derive = { workspace = true, optional = true }
xval = { workspace = true }

[dev-dependencies]
serde_json = "1"