[package]
name = "xval"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
derive = ["xval-derive"]
serde = ["dep:serde", "xpath/serde"]

[dependencies]
xpath = { workspace = true }
xval-derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"