[package]
name = "xwire"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
derive = ["xwire-derive"]

[dependencies]
xwire-derive = { workspace = true, optional = true }